--- a/organizeit/src/main/resources/templates/drawer.html
+++ b/organizeit/src/main/resources/templates/drawer.html
@@ -143,7 +143,7 @@
         document.getElementById("newItemName").value = null;
         document.getElementById("newItemDesc").value = null;
 
-        //window.location = "http://"+backendIP+":8080/Drawers/"+drawerName;
+        location.reload();
     }
 
     function cancel(){
@@ -151,7 +151,6 @@
         document.getElementById("newItemDesc").value = null;
 
         promptModal.style.display = "none";
-        //window.location = "http://"+backendIP+":8080/Drawers/"+drawerName;
     }
 
     window.onclick = function(event) {
@@ -160,7 +159,6 @@
             document.getElementById("newItemDesc").value = null;
 
             promptModal.style.display = "none";
-            //window.location = "http://"+backendIP+":8080/Drawers/"+drawerName;
         }
     }
 </script>
