--- a/organizeit/src/main/resources/templates/index.html
+++ b/organizeit/src/main/resources/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>OrganizeIt</title>
     <style>
+        h1{
+            text-align: center;
+        }
         #shelf_container{
             max-width: fit-content;
             margin-left: auto;
@@ -56,9 +59,94 @@
         .drawer:hover {
             background-color: #dadada;
         }
+
+        /* Button to add a new Item */
+        .addButton {
+            /*width: fit-content;
+            padding: 5px 25px;
+            margin-top: 25px;
+            margin-left: 50%;
+            transform: translate(-50%);
+            display: inline-block;
+            outline: none;
+            cursor: pointer;
+            background-color: blue;
+            border-radius: 0.25rem;
+            border: 1px solid blue;
+            color: #fff;
+            font-size: 24px;
+            line-height: 30px;
+            text-align: center;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
+        }
+
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            height: 50%;
+        }
+        .modal ul {
+            list-style-type: none;
+        }
+        .modal li {
+            text-align: left;
+            color: black;
+            font-size: 24px;
+            width: fit-content;
+            background-color: white;
+            padding: 20px 20px 0 20px;
+        }
+        .modal li:hover{
+            background-color: white;
+        }
+        .modal input{
+            margin-left: 10px;
+            margin-right: 10px;
+            border-bottom: 1px solid black;
+        }
+
+        /* Button to save the newly created Item */
+        .saveButtonContainer {
+            position: relative;
+            width: 100%;
+            height: 75%;
+            z-index: 1;
+        }
+        .innerDiv{
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            z-index: 1;
+        }
+
+        .drawer-input {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
+    <h1>Regale</h1>
+    <button class="addButton" onclick="addShelf()">Regal hinzufügen</button>
     <div id="shelf_container">
         <div class="collapsible-container" th:each="shelf : ${shelves}">
             <button class="collapsible">
@@ -76,7 +164,102 @@
         </div>
     </div>
 
-<script>
+    <div id="prompt" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <label>Name:<input type="text" id="newShelfName"/></label>
+            <label>Raum:<input type="text" id="newShelfRoom"/></label>
+
+            <div id="drawerInputs">
+                <label>Laden:</label><br>
+                <div class="drawer-input">
+                    <input type="text" name="drawerName" class="drawerName" placeholder="Drawer Name">
+                </div>
+            </div>
+
+            <button type="button" id="addDrawerButton">Lade hinzufügen</button><br><br>
+
+            <div class="saveButtonContainer"><div class="innerDiv"><button class="addButton" onclick="cancel()">Abbrechen</button><button class="addButton" onclick="saveShelf()">Speichern</button></div></div>
+        </div>
+    </div>
+
+<script th:inline="javascript">
+    const backendIP = "localhost:8080";
+    const drawerName = /*[[${drawer}]]*/ '';
+    const promptModal = document.getElementById("prompt");
+
+    function addShelf(){
+        promptModal.style.display = "block";
+    }
+
+    document.getElementById('addDrawerButton').addEventListener('click', function() {
+        const drawerInputs = document.getElementById('drawerInputs');
+        const newDrawerInput = document.createElement('div');
+        newDrawerInput.classList.add('drawer-input');
+        newDrawerInput.innerHTML = '<input type="text" name="drawerName" class="drawerName" placeholder="Drawer Name">';
+        drawerInputs.appendChild(newDrawerInput);
+    });
+
+    async function saveShelf(){
+        promptModal.style.display = "none";
+
+        const shelfName = document.getElementById('newShelfName').value;
+        const shelfRoom = document.getElementById('newShelfRoom').value;
+        const drawerNames = Array.from(document.getElementsByClassName('drawerName'))
+            .map(input => input.value)
+            .filter(name => name.trim() !== '');
+
+        const shelfData = {
+            name: shelfName,
+            room: shelfRoom,
+            drawers: drawerNames.map(name => ({ name: name }))
+        };
+
+        await fetch('/api/createShelf', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(shelfData)
+        })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+                return response.json();
+            })
+            .then(data => {
+                console.log('Success:', data);
+                alert('Shelf created successfully!');
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Error creating shelf');
+            });
+
+        document.getElementById("newShelfName").value = null;
+        document.getElementById("newShelfRoom").value = null;
+
+        location.reload();
+    }
+
+    function cancel(){
+        document.getElementById("newShelfName").value = null;
+        document.getElementById("newShelfRoom").value = null;
+
+        promptModal.style.display = "none";
+    }
+
+    window.onclick = function(event) {
+        if (event.target === promptModal) {
+            document.getElementById("newShelfName").value = null;
+            document.getElementById("newShelfRoom").value = null;
+
+            promptModal.style.display = "none";
+        }
+    }
+
+    // This code is responsible for making the Shelf-Buttons collapsible
     document.addEventListener("DOMContentLoaded", function() {
         var coll = document.getElementsByClassName("collapsible");
         for (var i = 0; i < coll.length; i++) {
