Fixed Bug & changed Font
Fixed Bug where the Drawers would get inserted into the db in the wrong order because a Set was being used. To Fix this I just changed the Set to a List.
Also I changed the font to "Courier".

--- a/organizeit/src/main/resources/templates/drawer.html
+++ b/organizeit/src/main/resources/templates/drawer.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>OrganizeIt</title>
     <style>
+        body{
+            font-family: 'Courier New', Courier, monospace;
+        }
         #container{
             max-width: fit-content;
             margin-left: auto;
