--- a/organizeit/src/main/resources/templates/index.html
+++ b/organizeit/src/main/resources/templates/index.html
@@ -118,6 +118,11 @@
         #cancelBtn:hover{
             transform: translateY(-3px);
         }
+        .saveButtonContainer{
+            margin-top: 15px;
+            width: fit-content;
+            height: fit-content;
+        }
 
         /* The Modal (background) */
         .modal {
@@ -141,33 +146,13 @@
             padding: 20px;
             border: 1px solid #888;
             width: fit-content;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
             /*width: 80%;
             height: 50%;*/
-        }
-        .modal ul {
-            list-style-type: none;
-        }
-        .modal li {
-            text-align: left;
-            color: black;
-            font-size: 24px;
-            width: fit-content;
-            background-color: white;
-            padding: 20px 20px 0 20px;
-        }
-        .modal li:hover{
-            background-color: white;
         }
         .modal input{
             margin-left: 10px;
             margin-right: 10px;
-            border-bottom: 1px solid black;
-        }
-
-        .saveButtonContainer{
-            margin-top: 15px;
-            width: fit-content;
-            height: fit-content;
         }
 
         /* Input Fields for the new Drawers in the Modal */
