--- a/organizeit/src/main/resources/templates/drawer.html
+++ b/organizeit/src/main/resources/templates/drawer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>OrganizeIt</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body{
             font-family: 'Courier New', Courier, monospace;
@@ -147,8 +148,8 @@
     </style>
 </head>
 <body>
-    <h1 th:text="${drawer}"></h1>
-    <button id="addItemButton" onclick="addItem()">&#x2795; Gegenstand hinzufügen</button>
+    <h1 th:text="${drawer.name}"></h1>
+    <button id="addItemButton" onclick="addItem()"><i class="fa-solid fa-plus"></i> Gegenstand hinzufügen</button>
     <div id="item-container">
         <ul>
             <li th:each="item : ${items}">
@@ -176,7 +177,7 @@
 
 <script th:inline="javascript">
     const backendIP = "localhost:8080";
-    const drawerName = /*[[${drawer}]]*/ '';
+    const drawerId = /*[[${drawerId}]]*/ '';
     const promptModal = document.getElementById("prompt");
 
     function addItem(){
@@ -188,8 +189,34 @@
         let name = document.getElementById("newItemName").value;
         let desc = document.getElementById("newItemDesc").value;
 
-        console.log(drawerName);
-        await fetch("http://"+backendIP+"/api/createItem?name="+name+"&desc="+desc+"&drawerName="+drawerName, {method:"POST"});
+        const itemData = {
+            name: name,
+            room: desc,
+            drawerId: drawerId
+        };
+
+        // API-Call to insert the item into the db
+        await fetch('/api/createItem', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(itemData)
+        })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+                return response.json();
+            })
+            .then(data => {
+                console.log('Success:', data);
+                //alert('Item created successfully!');
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                //alert('Error creating item');
+            });
 
         document.getElementById("newItemName").value = null;
         document.getElementById("newItemDesc").value = null;
